Fixed layout issues for annoying ad

--- a/src/Components/Annoying-ad/annoying-ad.css
+++ b/src/Components/Annoying-ad/annoying-ad.css
@@ -4,17 +4,27 @@
     align-items: center;
     position: fixed;
     width: 90%;
-    max-width: 650px;
-    max-height: 90vh;
+    max-width: 500px;
+    max-height: 85vh;
     top: 50px;
     left: 20px;
     border-radius: 5px;
     border: 1px solid black;
     background-color: gray;
     z-index: 10;
+    overflow-y: scroll;
+	overflow-x: hidden;
 
     font-size: 1em;
     color: rgb(0, 255, 55);
+}
+
+.annoying-ad a {
+    width: 100%;
+}
+
+.annoying-ad p {
+    margin: 0;
 }
 
 .annoying-ad h3 {
@@ -33,9 +43,21 @@
 
 .annoyingad-buttons {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.confuse-buttons {
+    width: 90%;
+    display: flex;
     justify-content: space-around;
+
 }
 
 .not-interested-button {
-    font-size: .5em;
+    font-size: .5em !important;
+}
+
+.want-it {
+    width: 90%;
 }
